--- a/index.html
+++ b/index.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Marathon 1</title>
-    </head>
+    <head></head>
     <body>
-
-<div>
-<h1><p><strong>Website</strong></p></h1>
-</div>
-
-<p><strong>Halo, nama saya Marsyanda Firlyandita</strong></p>
-<p>Ini youtube channel favorite saya <a href="https://www.youtube.com/riasukmawijaya/">ria sw</a> </p>
-<img src="Logo-ILC.png" alt="Logo ILC">
+        <u1>
+            <li>Informatika</li>
+            <li>Sistem Informasi</li>
+            <li>Sains Data</li>
+            <li>Bisnis Digital</li>
+        </u1>
     </body>
 </html>
